# titlesplit-generator

./: .env.example  .gitignore  .mcp.json  00-master-context.md  alembic.ini  docker-compose.yml  package-lock.json  pyproject.toml  render.yaml  requirements.txt  titlesplit.db  vercel.json
alembic/: env.py
alembic/versions/: 001_add_archived_column.py  002_add_floorplan_columns.py  003_add_gdv_report_columns.py
frontend/: package-lock.json
src/: config.py  database.py  main.py
src/analysis/: __init__.py  ai_analysis.py  cost_calculator.py  floorplan_analyzer.py  gdv_calculator.py  impact_rules.py  recommendation.py  scoring.py  screening.py  valuation.py
src/api/: analyze.py  manual_inputs.py  opportunities.py  properties.py  schemas.py  scraper.py
src/data_sources/: __init__.py  epc.py  land_registry.py  planning.py
src/models/: __init__.py  manual_inputs.py  (+2 more)
tests/: test_gdv_validation.py
title split build chunks/: README.md  chunk-00-summary.md  chunk-01-project-setup.md  chunk-02-rightmove-scraper.md  chunk-03-epc-integration.md  chunk-04-land-registry.md  chunk-05-planning-data.md  chunk-06-ai-analysis.md  chunk-07-cost-calculator.md  chunk-08-unit-valuation.md  chunk-09-api-endpoints.md  chunk-10-background-tasks.md  chunk-11-data-matrix.md  chunk-12-implementation-phases.md  chunk-13-initial-recommendation.md  chunk-14-manual-input-schema.md  chunk-15-impact-assessment.md  chunk-16-recommendation-engine.md  chunk-17-manual-input-api.md  chunk-18-data-sources.md  chunk-19-gdv-calculator.md  chunk-20-lender-reports.md  chunk-21-api-summary.md
(+22 files in other folders)
